completed user signup route
