# controller/user.controller.js
@@ -1,0 +1,36 @@
+const User = require("../models/user.model");
+const BigPromise = require("../middleware/BigPromise");
+const CustomError = require("../utils/CustomError");
+const cookieToken = require("../utils/cookieToken");
+const fileupload = require("express-fileupload");
+const cloudinary = require("cloudinary");
+
+exports.signup = BigPromise(async (req, res, next) => {
+  if (!req.files) {
+    return next(new CustomError("photo is required for signup", 400));
+  }
+  const { name, email, password } = req.body;
+
+  if (!(email && name && password)) {
+    return next(new CustomError("Name, email and password are required", 400));
+  }
+
+  let file = req.files.photo;
+  const result = await cloudinary.v2.uploader.upload(file.tempFilePath, {
+    folder: "users",
+    width: 150,
+    crop: "scale",
+  });
+
+  const user = await User.create({
+    name,
+    email,
+    password,
+    photo: {
+      id: result.public_id,
+      secure_url: result.secure_url,
+    },
+  });
+
+  cookieToken(user, res);
+});
