# swagger.yaml
@@ -35,50 +35,72 @@ components:
     User:
       type: object
       properties:
-        firstname:
-          type: string
-        lastname:
+        name:
           type: string
         email:
           type: string
+        role:
+          type: string
         _id:
           type: string
-        token:
+        createdAt:
           type: string
+        photo:
+          type: object
+          properties:
+            id:
+              type: string
+            secure_url:
+              type: string
 
 paths:
-  /register:
+  /signup:
     post:
       tags:
         - Auth
       summary: creates new user
       consumes:
-        - application/json
+        - multipart/form-data
       produces:
         - application/json
       requestBody:
-        description: Provide all fields
-        required: true
         content:
-          application/json:
+          multipart/form-data:
             schema:
               type: object
+              required:
+                - name
+                - email
+                - password
+                - photo
               properties:
-                firstname:
+                name:
                   type: string
-                lastname:
-                  type: string
+                  required: true
                 email:
                   type: string
+                  required: true
                 password:
                   type: string
+                  required: true;
+                photo:
+                  in: formdata
+                  description: upload file data
+                  type: file
       responses:
-        201:
+        200:
           description: User added successfully
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/User"
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                  token:
+                    type: string
+                  user:
+                    $ref: "#/components/schemas/User"
         400:
           description: Some of the fields are missing
           content:
